--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
 <body>
   <div id="wrapper">
     <header>
-      <h1 id="brand"></h1>
+      <h1 id="brand"><img src="/images/logo.svg" alt="logo"></h1>
       <div class="hero"></div>
     </header>
     <main>
-      <h2 class="title">We're coming soon</h2>
-
+      <h2 class="title"><span class="em">We're</span> coming soon</h2>
       <p>
         Hello fellow shoppers! We're currently building our new fashion store.
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
-      <div class="container">
-        Email Address
-      </div>
+      <form class="input-container">
+                
+          <label for="email">Email address</label>
+          <input name="email" type="email" placeholder="Email Address" required  />
+          <button type="submit" class="btn">&gt;</button>      
+        
+      </form>
     </main>
     <footer>
       <div class="attribution">
