--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
 
 <body>
   <div id="wrapper">
-    <header>
-      <h1 id="brand"><img src="/images/logo.svg" alt="logo"></h1>
-      <div class="hero"></div>
-    </header>
-    <main>
-      <h2 class="title"><span class="em">We're</span> coming soon</h2>
-      <p>
-        Hello fellow shoppers! We're currently building our new fashion store.
-        Add your email below to stay up-to-date with announcements and our launch deals.
-      </p>
-      <form class="input-container">
-                
+    <div class="container">
+      <header>
+        <h1 id="brand"><img src="/images/logo.svg" alt="logo"></h1>
+        <div class="hero-mobile"></div>
+      </header>
+      <main>
+        <h2 class="title"><span class="em">We're</span> coming soon</h2>
+        <p>
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our launch deals.
+        </p>
+        <form class="input-container">
+
           <label for="email">Email address</label>
-          <input name="email" type="email" placeholder="Email Address" required  />
-          <button type="submit" class="btn">&gt;</button>      
-        
-      </form>
-    </main>
-    <footer>
-      <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/armino-dev" title="See Armino's profile on GitHub">Armino</a>.
-      </div>
-    </footer>
+          <input name="email" type="email" placeholder="Email Address" required />
+          <button type="submit" class="btn">&gt;</button>
+
+        </form>
+      </main>
+    </div>
+    <div class="hero-desktop"></div>    
   </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/armino-dev" title="See Armino's profile on GitHub">Armino</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
