Added aria-label to email input

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
           Add your email below to stay up-to-date with announcements and our launch deals.
         </p>
         <form class="input-container">
-
           <label for="email">Email address</label>
-          <input name="email" type="email" placeholder="Email Address" required />
+          <input id="email" name="email" type="email" aria-label="email" placeholder="Email Address" required />
           <button type="submit" class="btn">&gt;</button>
-
         </form>
       </main>
     </div>
